k8s/overlays/dev/rendered.yaml
apiVersion: v1
kind: Namespace
metadata:
  name: dev
---
apiVersion: v1
kind: Service
metadata:
  labels:
    app.kubernetes.io/name: todo
    app.kubernetes.io/version: 1.0.0
  name: todo
  namespace: dev
spec:
  ports:
  - name: http
    port: 80
    protocol: TCP
    targetPort: http
  selector:
    app.kubernetes.io/name: todo
  type: LoadBalancer
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app.kubernetes.io/name: todo
  name: todo
  namespace: dev
spec:
  replicas: 2
  selector:
    matchLabels:
      app.kubernetes.io/name: todo
  template:
    metadata:
      labels:
        app.kubernetes.io/name: todo
    spec:
      containers:
      - image: todo:latest
        imagePullPolicy: Never
        livenessProbe:
          httpGet:
            path: /
            port: http
        name: todo
        ports:
        - containerPort: 8080
          name: http
          protocol: TCP
        readinessProbe:
          httpGet:
            path: /
            port: http
        securityContext: {}
      securityContext: {}
