k8s/overlays/dev/ingress.yaml
apiVersion: networking.k8s.io/v1beta1
kind: Ingress
metadata:
  name: todo-ingresss
spec:
  rules:
  - http:
      paths:
      - path: /
        backend:
          serviceName: todo
          servicePort: 80
